--- a/milestone_4.Rmd
+++ b/milestone_4.Rmd
@@ -77,9 +77,26 @@ korean_migration_data %>%
 
 ```{r MAP}
 #Want to change maps to show by county how many koreans live in each county
+population_korea<- read_csv("data/Copy of DEC_10_SF1_PCT7_with_ann.csv") %>% 
+  clean_names()
+
+population_korea<- population_korea%>% 
+  dplyr::select(geo_display_label,d012)
+
+  population_korea<- population_korea[2:nrow(population_korea),]
+
+population_korea %>% 
+      mutate(region = str_extract(geo_display_label,)) %>% 
+      
+
 
 usa<-map_data("usa")
 states<-map_data("state")
+county<- map_data("county")
+
+ggplot() + geom_polygon(data = county, aes(x=long, y = lat, group = group, fill = region),color = "white") + 
+  coord_fixed(1.3)
+
 ggplot() + geom_polygon(data = usa, aes(x=long, y = lat, group = group)) + 
   coord_fixed(1.3)
 
